--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,8 +210,8 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
-  background: url("../img/harihome8.jpeg") top center;
+  height: 100vmin;
+  background: url("../img/hari\ web2.jpeg") top center;
   background-size: cover;
 }
 
